# brim

./: Cargo.toml  README.md  ROADMAP.md  install.sh  recipe-schema.json
.github/workflows/: release.yml
examples/: test-recipe-cask.json
src/: lib.rs  main.rs
src/constants/: brew_consts.rs  mod.rs
src/models/: brew_package.rs  brew_package_result.rs  brew_sync_report.rs  mod.rs
src/tests/: mod.rs
src/tui/: mod.rs  progress.rs
src/utilities/: brew_common.rs  brew_fetch_packages.rs  brew_install_packages.rs  brew_list_installed_packages.rs  brew_recipe_lock.rs  brew_remove_packages.rs  mod.rs
src/webhook/: mod.rs
