[package]
name = "brim"
version = "0.2.0-alpha.3"
edition = "2021"
default-run = "brim"

# Additional metadata
authors = ["Alex Ghinea <alexandrughinea.dev+brim@gmail.com>"]
description = "A hassle-free tool for effortless installations. Enjoy seamless, customized integration with self managed remote lists, eliminating manual setup."
license = "Apache 2.0"
repository = "https://github.com/brim-run/brim"
homepage = "https://github.com/brim-run/brim"
keywords = ["rust", "cli", "brim"]
categories = ["command-line-utilities"]

[lib]
name = "brim"
path = "src/lib.rs"

[[bin]]
name = "brim-mcp"
path = "src/bin/brim-mcp.rs"
required-features = ["mcp"]

# Cross-compilation targets
[target.x86_64-apple-darwin.dependencies]
[target.aarch64-apple-darwin.dependencies]
[target.x86_64-unknown-linux-gnu.dependencies]
[target.arm-unknown-linux-gnueabihf.dependencies]

[features]
default = []
mcp = ["model-context-protocol"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
clap = "4.5"
dialoguer = "0.12.0"
console = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ratatui = "0.30.0"
crossterm = "0.29.0"
rustls-platform-verifier = "0.6"

# MCP server (optional, for brim-mcp binary)
model-context-protocol = { version = "0.2", optional = true, features = ["stdio-server", "macros"] }


